new image added

--- a/index.html
+++ b/index.html
@@ -567,6 +567,11 @@ const testimonies = [
     image: "images/fw-jeevitha.jpeg",
     name: "Jeevitha",
     comment: "I have no doubt that your journey together will be filled with love, laughter, and endless happiness. Wishing you both a beautiful life ahead!"
+  },
+  {
+    image: "images/fw-shalini-1.jpeg",
+    name: "Shalini",
+    comment: "Watching you start this new chapter with her makes me so happy,. Wishing you both all the happiness in the world!"
   }
 ];
 
